--- a/style.css
+++ b/style.css
@@ -1,1 +1,46 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+header {
+  overflow: hidden;
+  padding: 0 10px;
+  background-color: #ff4800;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+header li {
+  list-style: none;
+  font-weight: bold;
+}
+
+header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+  background-color: white;
+  margin: 4px;
+}
+
+header #navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+section {
+  width: 80%;
+  margin: 2vh auto;
+  background-color: rgba(173, 114, 62, 0.445);
+  padding: 2px 5px;
+}
+/*# sourceMappingURL=style.css.map */
