--- a/style.css
+++ b/style.css
@@ -1,22 +1,11 @@
-.forside {
+#maintop {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("https://image.forskning.no/142013.jpg?imageId=142013&panow=0&panoh=0&panox=0&panoy=0&heightw=0&heighth=0&heightx=0&heighty=0&width=1200&height=630");
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://image.forskning.no/142013.jpg?imageId=142013&panow=0&panoh=0&panox=0&panoy=0&heightw=0&heighth=0&heightx=0&heighty=0&width=1200&height=630");
-  height: 60vh;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
 }
 
-.forside .forsidetekst {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  color: white;
-  font-size: 2em;
+#steinalderTop {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("https://www.khm.uio.no/skoletilbud/steinalderen/bilder/steinalderboplass-strand-arkikon-507.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://www.khm.uio.no/skoletilbud/steinalderen/bilder/steinalderboplass-strand-arkikon-507.jpg");
 }
 
 h1, h2, h3 {
@@ -74,6 +63,25 @@ header #navbar .active {
   background-color: #96491d;
   border-bottom: 5px solid white;
   color: white;
+}
+
+.forside {
+  height: 60vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.forside .forsidetekst {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: white;
+  font-size: 2em;
 }
 
 section {
