--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-@import 'main';
+@import 'main','tidslinje';
 h1, h2, h3{
     font-family: 'Kanit', sans-serif;
 }
@@ -43,6 +43,23 @@ header{
             border-bottom: 5px solid white;
             color: white;
         }
+    }
+}
+
+.forside{
+    height: 60vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    .forsidetekst{
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-size: 2em;
     }
 }
 
