--- a/style.css
+++ b/style.css
@@ -3,11 +3,6 @@
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://image.forskning.no/142013.jpg?imageId=142013&panow=0&panoh=0&panox=0&panoy=0&heightw=0&heighth=0&heightx=0&heighty=0&width=1200&height=630");
 }
 
-#steinalderTop {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("https://www.khm.uio.no/skoletilbud/steinalderen/bilder/steinalderboplass-strand-arkikon-507.jpg");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://www.khm.uio.no/skoletilbud/steinalderen/bilder/steinalderboplass-strand-arkikon-507.jpg");
-}
-
 h1, h2, h3 {
   font-family: 'Kanit', sans-serif;
 }
@@ -42,12 +37,37 @@ header .headerContent {
           justify-content: space-between;
 }
 
-header .headerContent li {
+header .headerContent #logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header .headerContent #logo img {
+  height: 7vh;
+  margin-right: 1vw;
+}
+
+header .headerContent #navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+header .headerContent #navbar li {
   list-style: none;
   font-weight: bold;
 }
 
-header .headerContent a {
+header .headerContent #navbar a {
   float: left;
   color: black;
   text-align: center;
@@ -59,14 +79,6 @@ header .headerContent a {
   background-color: white;
   margin: 4px;
   border-bottom: 5px solid #96491d;
-}
-
-header .headerContent #navbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
 }
 
 header .headerContent #navbar .active, header .headerContent #navbar a:hover {
