--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-@import 'main','tidslinje';
+@import 'main';
 h1, h2, h3{
     font-family: 'Kanit', sans-serif;
 }
@@ -26,26 +26,35 @@ header{
         color: white;
         display: flex;
         justify-content: space-between;
-        li{
-            list-style: none;
-            font-weight: bold;
-        }
-        a{
-            float: left;
-            color: black;
-            text-align: center;
-            padding: 12px;
-            text-decoration: none;
-            font-size: 18px;
-            line-height: 25px;
-            border-radius: 4px;
-            background-color: white;
-            margin: 4px;
-            border-bottom: 5px solid rgb(150, 73, 29);
+        #logo{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            img{
+                height: 7vh;
+                margin-right: 1vw;
+            }
         }
         #navbar{
             display: flex;
             justify-content: space-around;
+            li{
+                list-style: none;
+                font-weight: bold;
+            }
+            a{
+                float: left;
+                color: black;
+                text-align: center;
+                padding: 12px;
+                text-decoration: none;
+                font-size: 18px;
+                line-height: 25px;
+                border-radius: 4px;
+                background-color: white;
+                margin: 4px;
+                border-bottom: 5px solid rgb(150, 73, 29);
+            }
             .active, a:hover{
                 background-color: rgb(150, 73, 29);
                 border-bottom: 5px solid white;
