--- a/style.scss
+++ b/style.scss
@@ -3,9 +3,6 @@ h1, h2, h3{
     font-family: 'Kanit', sans-serif;
 }
 
-html{
-    
-}
 body{
     background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.856));
     width: 100%;
@@ -15,7 +12,7 @@ header{
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 2;
+    z-index: 1;
     background-color: rgb(9, 75, 39);
     padding: 0 15px;
     overflow: hidden;
@@ -31,13 +28,14 @@ header{
             justify-content: space-between;
             align-items: center;
             img{
-                height: 7vh;
-                margin-right: 1vw;
+                height: 7vw;
+                margin: 1vh 1vw 1vh 0;
             }
         }
         #navbar{
             display: flex;
             justify-content: space-around;
+            align-items: center;
             li{
                 list-style: none;
                 font-weight: bold;
@@ -61,7 +59,16 @@ header{
                 color: white;
             }
         }
+        
     }   
+    @media screen and (max-width: 1000px) {
+        background-color: blue;   
+        #navbar{
+
+        }
+
+            
+    }
 }
 
 .forside{
@@ -89,7 +96,7 @@ header{
 section{
     width: 80%;
     margin: 2vh auto;
-    background-color: rgba(241, 220, 203, 0.438);
+    background-color: rgb(207, 191, 171);
     padding: 2px 10px;
     .sectionTitle{
         border-bottom: 2px solid black;
