--- a/stylequiz.css
+++ b/stylequiz.css
@@ -1,17 +1,18 @@
 :root{
     --bakgrunn: #fff;
-    --farge1: #ff0606;
-    --farge2: #3cff00;
-    --popup-height: 70vh;
+    --farge1: rgb(9, 75, 39);
+    --farge2:  rgb(150, 73, 29);
+    --popup-height: 75vh;
     --popup-width: 40vw;
 }
 
 
 .pop-upbox {
-    min-height: 600px;
+
+    /* min-height: 600px; */
     width: var(--popup-width);
     height: var(--popup-height);
-    margin: 0 auto;
+    margin: 5vh auto;
     background-color: var(--bakgrunn);
     padding: 10px 50px 50px 50px;
     border: 2px solid #cbcbcb;
@@ -21,7 +22,7 @@
 .pop-upbox h1 {
     font-family: "sans-serif";
     background-color: var(--farge2);
-    font-size: 60px;
+    font-size: 50px;
     text-align: center;
     color: var(--farge1);
     padding: 2px 0px;
@@ -30,24 +31,24 @@
 #score {
     color: var(--farge2);
     text-align: center;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .pop-upbox #question {
     font-family: "monospace";
-    font-size: 30px;
+    font-size: 25px;
     color: var(--farge2);
 }
 
 .buttons {
-    height: 30vh;
+    height: 25vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-gap: 1em;
     grid-template-areas: "sp1 sp2"
     "sp3 sp4";
-    margin-top: 30px;
+    margin-top: 25px;
 }
 
 #btn0, #btn1, #btn2, #btn3 {
@@ -92,9 +93,9 @@
 
 .pop-up{
     position: absolute;
-    /* top: calc(50vh - (var(--popup-height) / 2) ); */
     top: 1vh;
-    left: calc(50vw - (var(--popup-width) / 2));
+    left: 0; 
+    right: 0; 
 }
 
 .content{
